first slash command for random quote working

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "quote_bot",
   "version": "1.0.0",
   "description": "A bot for managing quotes",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/index"
