--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@discordjs/opus": "^0.3.3",
     "@types/node": "^14.14.2",
     "discord.js": "^12.4.1",
+    "express": "^4.17.1",
     "ffmpeg-static": "^4.2.7",
     "gtts": "^0.2.1",
     "ts-node": "^8.10.2",
